# EchoEngine

./: .gitignore  CMakeLists.txt  imgui.ini  notes.md  readme.md  run.bat  run.sh
assets/models/: dirt_1k.mtl  landscape.mtl  monkey.mtl  room.mtl  terrain.mtl
assets/shaders/: Basic.frag  Basic.vert  atmosphere.frag  atmosphere_bruteforce.frag  brdf.frag  cubemap.vert  forward.frag  forward.vert  gbuffer.frag  gbuffer.vert  irradiance_convolution.frag  lighting.frag  multi_scattering.frag  postprocess.frag  prefilter.frag  shadow_map.vert  skybox.vert  ssao.frag  ssaoblur.frag  transmittance.frag  volumetric.frag  volumetric_backup.frag
src/: Entrypoint.cpp  Types.h
src/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  InputManager.cpp  InputManager.h  Lightsource.h  Scene.h
src/Renderer/: Buffer.cpp  Buffer.h  FullscreenQuad.cpp  FullscreenQuad.h  GPUTimer.h  MeshResource.cpp  MeshResource.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Renderer/RenderPasses/: AtmospherePass.cpp  ForwardPass.cpp  GeometryPass.cpp  LightingPass.cpp  SSAOPass.cpp  ShadowMapPass.cpp  SkyCapture.cpp
src/Resources/: Entity.cpp  Entity.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Texture.cpp  Texture.h
